--- a/debian/rules
+++ b/debian/rules
@@ -3,5 +3,5 @@
 %:
 		dh $@
 override_dh_auto_configure:
-		dh_auto_configure -- -DOBS_VERSION_OVERRIDE="27.2.4" -DBUILD_BROWSER=ON -DCEF_ROOT_DIR="../cef_binary_4638_linux64" -DTWITCH_CLIENTID='unla3~mb`xq9`1dhr?1lhhg`65mah0' -DTWITCH_HASH='2D4A98C454B4B0B6' -DRESTREAM_CLIENTID='ml6b16ec(n9?1#9g?m#>9f0,gnkojhhd;oh6' -DRESTREAM_HASH='2DE8E8C514397EE9' -DYOUTUBE_CLIENTID='153066229607$$;a7mw2ig756r?vc<f{`3tr3|i4gq167?$$lrpw,``jbnerwb{ibltals!fjo' -DYOUTUBE_CLIENTID_HASH='2DA97470255F7240' -DYOUTUBE_SECRET=';kV4NTXP5r>D`7bdLO^>gT8U' -DYOUTUBE_SECRET_HASH='F6215E72FC78C76F' -DAJA_LIBRARIES_INCLUDE_DIR="../ntv2" -DAJA_NTV2_LIB="../ntv2/build/ajalibraries/ajantv2/libajantv2.a" -DENABLE_PIPEWIRE=OFF
+		dh_auto_configure -- -DOBS_VERSION_OVERRIDE="27.2.4" -DBUILD_BROWSER=OFF -DTWITCH_CLIENTID='unla3~mb`xq9`1dhr?1lhhg`65mah0' -DTWITCH_HASH='2D4A98C454B4B0B6' -DRESTREAM_CLIENTID='ml6b16ec(n9?1#9g?m#>9f0,gnkojhhd;oh6' -DRESTREAM_HASH='2DE8E8C514397EE9' -DYOUTUBE_CLIENTID='153066229607$$;a7mw2ig756r?vc<f{`3tr3|i4gq167?$$lrpw,``jbnerwb{ibltals!fjo' -DYOUTUBE_CLIENTID_HASH='2DA97470255F7240' -DYOUTUBE_SECRET=';kV4NTXP5r>D`7bdLO^>gT8U' -DYOUTUBE_SECRET_HASH='F6215E72FC78C76F' -DAJA_LIBRARIES_INCLUDE_DIR="../ntv2-16.2-bugfix5" -DAJA_NTV2_LIB="../ntv2-16.2-bugfix5/build/ajalibraries/ajantv2/libajantv2.a" -DENABLE_PIPEWIRE=OFF
 
